[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprocesscontrol"
version = "0.0.2"
authors = [
  { name="Andrew Faulkner", email="andrewhfaulkner@hotmail.com" },
]
description = "A package for manufacturing process control"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]